adjust products search
